# ThermaGuard-AI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: generate_data.py
tests/: __init__.py  test_api.py  test_data_generator.py
thermaguard/: __init__.py  config.py  logger.py
thermaguard/api/: __init__.py  main.py
thermaguard/api/routes/: __init__.py  alerts.py  forecast.py  ingest.py  status.py
thermaguard/database/: __init__.py  influxdb.py
thermaguard/services/: alerts.py  anomaly_detection.py  forecasting.py
thermaguard/tasks/: __init__.py  celery_app.py  monitoring.py
thermaguard/utils/: __init__.py  validators.py
